--- a/packages/strapi-admin/admin/src/components/Header/styles.scss
+++ b/packages/strapi-admin/admin/src/components/Header/styles.scss
@@ -1,15 +1,12 @@
-// Import
-@import "../../styles/variables/variables";
-
 .header { /* stylelint-ignore */
   width: 100%;
-  height: $header-height;
+  height: 6rem;
   position: fixed;
   z-index: 100;
-  left: $left-menu-width;
+  left: 24rem;
 
   box-shadow:  0 1px 2px 0 rgba(40, 42, 49, 0.16);
-  background-color: $white;
+  background-color: #ffffff;
 
-  line-height: $header-height;
+  line-height: 6rem;
 }
